--- a/flower_pattern.ipynb
+++ b/flower_pattern.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "32b9af83",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "84f2acfb",
    "metadata": {},
    "outputs": [],
@@ -29,14 +29,17 @@
     "Dimensions_1 = 200\n",
     "Dimensions_2= 200\n",
     "PI = np.pi\n",
-    "K = 0.56085639\n",
+    "R_0 = 0.56085639\n",
     "DEGREE = 2\n",
-    "global Dimensions, PI, K,DEGREE"
+    "P=0.5\n",
+    "Q=4\n",
+    "A=0.05 #Amplitude Parameter\n",
+    "global Dimensions, PI, R_0, DEGREE, P, Q, A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "fa85ca6f",
    "metadata": {},
    "outputs": [],
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "96536562",
    "metadata": {},
    "outputs": [],
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "4bc2483d",
    "metadata": {},
    "outputs": [],
@@ -72,15 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "d3298b21",
    "metadata": {},
    "outputs": [],
    "source": [
     "def radius(theta, c, m):\n",
+    "    global Dimensions, PI, R_0, DEGREE, P, Q, A\n",
     "    pertu = pertubation(theta)\n",
     "    scalling = 1/(np.power((1+c), m))\n",
-    "    r = scalling*((1-c)**0.5*K)+(np.power(1-c, 4)*0.05*pertu)###use 0.561 to sure the surface = 1\n",
+    "    r = scalling*((1-c)**P*R_0)+(np.power(1-c, Q)*A*pertu)###use R_0 = 0.561 to sure the surface = 1\n",
     "    return r"
    ]
   },
@@ -94,43 +98,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "6f607b8c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Dev_r_theta(theta, c, m):\n",
+    "    global Dimensions, PI, R_0, DEGREE, P, Q, A\n",
     "    dev_per = dev_pertubation(theta)\n",
-    "    d_r = 0.05*np.power((1-c), 4)*dev_per\n",
+    "    d_r = A*np.power((1-c), Q)*dev_per\n",
     "    return d_r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "b1b72086",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Dev_r_c(theta, c, m):\n",
-    "    pertu = pertubation(theta)*0.05\n",
+    "    global Dimensions, PI, R_0, DEGREE, P, Q, A\n",
+    "    pertu = pertubation(theta)*A\n",
     "    A = 1/(np.power((1+c), m))\n",
-    "    B = (1-c)**0.5*K\n",
+    "    B = (1-c)**P*R_0\n",
     "    dA = -m*np.power(1+c, -m-1)\n",
-    "    dB = -0.5*K*(1-c)**(-0.5)\n",
-    "    dC = pertu*(4)*((1-c)**((4)-1))####require C != 1, when C == 1, there will be a signarity.\n",
+    "    dB = (-P)*R_0*(1-c)**(P-1)\n",
+    "    dC = pertu*(Q)*((1-c)**((Q)-1))####require C != 1, when C == 1, there will be a signarity.\n",
     "    d_r = A*dB+B*dA+dC\n",
     "    return d_r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "3cb25e85",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Dev_h_c(c, n):\n",
+    "    global Dimensions, PI, R_0, DEGREE, P, Q, A\n",
     "    d_h = n*np.power(c, n-1)####set c_max=1\n",
     "    return d_h"
    ]
@@ -161,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "3aea2e7c",
    "metadata": {},
    "outputs": [],
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "31a960d0",
    "metadata": {},
    "outputs": [],
@@ -243,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "id": "8ab50cef",
    "metadata": {},
    "outputs": [],
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "830826c2",
    "metadata": {},
    "outputs": [],
@@ -866,7 +873,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -880,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
