--- a/Pentagon.ipynb
+++ b/Pentagon.ipynb
@@ -215,38 +215,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def dev_r_C2fun(theta_ranges, Radius, c_ranges, m):\n",
-    "#     global r, c_max, N\n",
-    "#     c = np.reshape(c_ranges, (-1,1))\n",
-    "#     C_N_factor = (1+(c/c_max))**m\n",
-    "#     Sin = np.sin(theta_ranges)\n",
-    "#     Cos = np.cos(theta_ranges)\n",
-    "#     R_sin = Radius*Sin\n",
-    "#     R_cos = Radius*Cos\n",
-    "#     eq1 = a1*R_sin+b1*R_cos-r*C_N_factor\n",
-    "#     eq2 = a2*R_sin+b2*R_cos-r*C_N_factor\n",
-    "#     eq3 = a3*R_sin+b3*R_cos-r*C_N_factor\n",
-    "#     eq4 = a4*R_sin+b4*R_cos-r*C_N_factor\n",
-    "#     eq5 = a5*R_sin+b5*R_cos-r*C_N_factor\n",
-    "    \n",
-    "    \n",
-    "#     ############################\n",
-    "#     d_eq1_1 = a1*Sin+b1*Cos\n",
-    "#     d_eq2_1 = a2*Sin+b2*Cos\n",
-    "#     d_eq3_1 = a3*Sin+b3*Cos\n",
-    "#     d_eq4_1 = a4*Sin+b4*Cos\n",
-    "#     d_eq5_1 = a5*Sin+b5*Cos\n",
-    "    \n",
-    "    \n",
-    "#     ###########################\n",
-    "#     B = (-r*m*((1+c/c_max)**(m-1))*(1/c_max))*(eq2*eq3*eq4*eq5+eq1*eq3*eq4*eq5+eq2*eq1*eq4*eq5+eq1*eq2*eq3*eq5\n",
-    "#                                               +eq1*eq2*eq3*eq4)\n",
-    "#     A = (d_eq1_1*eq2*eq3*eq4*eq5+d_eq2_1*eq1*eq3*eq4*eq5+d_eq3_1*eq2*eq1*eq4*eq5\n",
-    "#         +d_eq4_1*eq2*eq1*eq3*eq5+d_eq5_1*eq2*eq1*eq4*eq3)\n",
-    "#     C = C_N_factor**N + c*(N*m)*((1+(c/c_max))**(N*m-1))*(1/c_max)\n",
-    "#     dev_r_c = -(B+C)/A\n",
-    "#     return dev_r_c\n",
-    "\n",
     "\n",
     "def dev_r_C2fun(theta_ranges, Radius, c_ranges, m):\n",
     "    global r, c_max, N\n",
@@ -543,55 +511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "6912a643",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'array' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#V=0.5 m,n=1.01758794,1.02311558\u001b[39;00m\n\u001b[1;32m     14\u001b[0m hh\n\u001b[0;32m---> 16\u001b[0m [\u001b[43marray\u001b[49m([\u001b[38;5;241m0.67268194\u001b[39m])]\n\u001b[1;32m     18\u001b[0m ss\n\u001b[1;32m     20\u001b[0m [\u001b[38;5;241m2.4585499491215397\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "#V=0.1  m,n=0.38040201, 0.98693467\n",
-    "\n",
-    "hh\n",
-    "\n",
-    "0.19411649\n",
-    "\n",
-    "ss\n",
-    "\n",
-    "1.122915832660931\n",
-    "\n",
-    "\n",
-    "#V=0.3 m,n=0.7,0.96\n",
-    "\n",
-    "hh\n",
-    "\n",
-    "[array([0.4763483])]\n",
-    "\n",
-    "ss\n",
-    "\n",
-    "[1.7496860076107035]\n",
-    "\n",
-    "\n",
-    "#V=0.5 m,n=1.01758794,1.02311558\n",
-    "\n",
-    "hh\n",
-    "\n",
-    "[array([0.67268194])]\n",
-    "\n",
-    "ss\n",
-    "\n",
-    "[2.4585499491215397]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -684,7 +608,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -698,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
