--- a/Triangular.ipynb
+++ b/Triangular.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 6\n",
+    "N = 3 #For triangular \n",
     "area = 1\n",
     "theta_ = (2*np.pi)/N\n",
     "r = intercept(area, N)\n",
@@ -49,12 +49,6 @@
     "b2 = np.cos(2*theta_)\n",
     "a3 = np.sin(3*theta_)\n",
     "b3 = np.cos(3*theta_)\n",
-    "a4 = np.sin(4*theta_)\n",
-    "b4 = np.cos(4*theta_)\n",
-    "a5 = np.sin(5*theta_)\n",
-    "b5 = np.cos(5*theta_)\n",
-    "a6 = np.sin(6*theta_)\n",
-    "b6 = np.cos(6*theta_)\n",
     "#####"
    ]
   },
@@ -191,31 +185,19 @@
     "    eq1 = a1*R_sin+b1*R_cos-r*C_N_factor\n",
     "    eq2 = a2*R_sin+b2*R_cos-r*C_N_factor\n",
     "    eq3 = a3*R_sin+b3*R_cos-r*C_N_factor\n",
-    "    eq4 = a4*R_sin+b4*R_cos-r*C_N_factor\n",
-    "    eq5 = a5*R_sin+b5*R_cos-r*C_N_factor\n",
-    "    eq6 = a6*R_sin+b6*R_cos-r*C_N_factor\n",
     "############################\n",
     "    d_eq1_1 = a1*Sin+b1*Cos\n",
     "    d_eq2_1 = a2*Sin+b2*Cos\n",
     "    d_eq3_1 = a3*Sin+b3*Cos\n",
-    "    \n",
-    "    d_eq4_1 = a4*Sin+b4*Cos\n",
-    "    d_eq5_1 = a5*Sin+b5*Cos\n",
-    "    d_eq6_1 = a6*Sin+b6*Cos\n",
     "###########################\n",
     "    d_eq1_2 = a1*R_cos-b1*R_sin\n",
     "    d_eq2_2 = a2*R_cos-b2*R_sin\n",
     "    d_eq3_2 = a3*R_cos-b3*R_sin\n",
-    "    d_eq4_2 = a4*R_cos-b4*R_sin\n",
-    "    d_eq5_2 = a5*R_cos-b5*R_sin\n",
-    "    d_eq6_2 = a6*R_cos-b6*R_sin\n",
     "###\n",
-    "    z_denominator = (d_eq1_1*eq2*eq3*eq4*eq5*eq6+d_eq2_1*eq1*eq3*eq4*eq5*eq6+d_eq3_1\n",
-    "                     *eq2*eq1*eq4*eq5*eq6+d_eq4_1*eq2*eq3*eq1*eq5*eq6+\n",
-    "                     d_eq5_1*eq2*eq3*eq4*eq1*eq6+d_eq6_1*eq2*eq3*eq4*eq5*eq1)\n",
-    "    z_numerator = -(d_eq1_2*eq2*eq3*eq4*eq5*eq6+d_eq2_2*eq1*eq3*eq4*eq5*eq6+d_eq3_2\n",
-    "                     *eq2*eq1*eq4*eq5*eq6+d_eq4_2*eq2*eq3*eq1*eq5*eq6+\n",
-    "                     d_eq5_2*eq2*eq3*eq4*eq1*eq6+d_eq6_2*eq2*eq3*eq4*eq5*eq1)\n",
+    "    z_denominator = (d_eq1_1*eq2*eq3+d_eq2_1*eq1*eq3+d_eq3_1\n",
+    "                     *eq2*eq1)\n",
+    "    z_numerator = -(d_eq1_2*eq2*eq3+d_eq2_2*eq1*eq3+d_eq3_2\n",
+    "                     *eq2*eq1)\n",
     "    dev_r_theta = z_numerator/z_denominator\n",
     "    return dev_r_theta"
    ]
@@ -235,33 +217,18 @@
     "    Cos = np.cos(theta_ranges)\n",
     "    R_sin = Radius*Sin\n",
     "    R_cos = Radius*Cos\n",
-    "    \n",
     "    eq1 = a1*R_sin+b1*R_cos-r*C_N_factor\n",
     "    eq2 = a2*R_sin+b2*R_cos-r*C_N_factor\n",
     "    eq3 = a3*R_sin+b3*R_cos-r*C_N_factor\n",
-    "    eq4 = a4*R_sin+b4*R_cos-r*C_N_factor\n",
-    "    eq5 = a5*R_sin+b5*R_cos-r*C_N_factor\n",
-    "    eq6 = a6*R_sin+b6*R_cos-r*C_N_factor\n",
-    "    \n",
-    "    ############################    \n",
+    "    ############################\n",
     "    d_eq1_1 = a1*Sin+b1*Cos\n",
     "    d_eq2_1 = a2*Sin+b2*Cos\n",
     "    d_eq3_1 = a3*Sin+b3*Cos\n",
-    "    \n",
-    "    d_eq4_1 = a4*Sin+b4*Cos\n",
-    "    d_eq5_1 = a5*Sin+b5*Cos\n",
-    "    d_eq6_1 = a6*Sin+b6*Cos\n",
     "    ###########################\n",
-    "    z_denominator = (d_eq1_1*eq2*eq3*eq4*eq5*eq6+d_eq2_1*eq1*eq3*eq4*eq5*eq6+d_eq3_1\n",
-    "                     *eq2*eq1*eq4*eq5*eq6+d_eq4_1*eq2*eq3*eq1*eq5*eq6+\n",
-    "                     d_eq5_1*eq2*eq3*eq4*eq1*eq6+d_eq6_1*eq2*eq3*eq4*eq5*eq1)\n",
-    "    c_n_factor = m*((1+c/c_max)**(m-1))*(1/c_max)\n",
-    "    C_derv = C_N_factor**N+c*N*(C_N_factor**(N-1))*c_n_factor\n",
-    "    z_numerator = C_derv+r*c_n_factor*(eq2*eq3*eq4*eq5*eq6+\n",
-    "                                       eq1*eq3*eq4*eq5*eq6+eq1*eq2*eq4*eq5*eq6\n",
-    "                                       +eq1*eq2*eq3*eq5*eq6+eq1*eq2*eq3*eq4*eq6\n",
-    "                                       +eq1*eq2*eq3*eq5*eq4)\n",
-    "    dev_r_c = z_numerator/z_denominator\n",
+    "    B = (-r*m*((1+c/c_max)**(m-1))*(1/c_max))*(eq2*eq3+eq1*eq3+eq2*eq1)\n",
+    "    A = (d_eq1_1*eq2*eq3+d_eq2_1*eq1*eq3+d_eq3_1*eq2*eq1)\n",
+    "    C = C_N_factor**N + c*(N*m)*((1+(c/c_max))**(N*m-1))*(1/c_max)\n",
+    "    dev_r_c = -(B+C)/A\n",
     "    return dev_r_c"
    ]
   },
@@ -288,7 +255,6 @@
     "\n",
     "    dimen_theta = len(theta_ranges)\n",
     "    dimen_c = len(C_ranges)\n",
-    "    \n",
     "    dev_h_c = dev_h_c2fun(C_ranges, n)\n",
     "    ds_base = (1/2)*(Radius**2)*(2*(np.pi)/(dimen_theta*N))\n",
     "    ds_2 = np.delete(ds_base, -1, axis=1)\n",
@@ -299,8 +265,6 @@
     "    \n",
     "    dela_base_average = 0.5*(delta_base_2+delta_base_3)\n",
     "    \n",
-    "\n",
-    "    \n",
     "    \n",
     "    dv = (dela_base_average*dev_h_c)*(c_max/dimen_c)\n",
     "    dv2 = np.delete(dv, -1, axis=0)\n",
@@ -310,30 +274,20 @@
     "    dv_sum = np.sum(dv_average)\n",
     "    H = v/(dv_sum*N)\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    dev_r_theta = dev_r_theta2fun(theta_ranges, Radius, C_ranges, m)\n",
     "    dl = np.sqrt(Radius**2 + dev_r_theta**2)*(2*(np.pi)/(dimen_theta*N))\n",
-    "    \n",
     "\n",
-    "###################################################################################################    \n",
-    "    \n",
     "    d_h = H*dev_h_c\n",
     "    dh = d_h.reshape(-1,1)\n",
     "    d_r_c = dev_r_C2fun(theta_ranges, Radius, C_ranges, m)\n",
     "    \n",
     "    #########################################################\n",
-    "    #d_r_c[0][dimen_c//2] = 0 #when c=0, the d_r_c is not derivative, so to avoid the singularity\n",
+    "    d_r_c[0][dimen_c//2] = 0 #when c=0, the d_r_c is not derivative, so to avoid the singularity\n",
     "    #########################################################\n",
     "    \n",
     "    \n",
     "    \n",
     "    ds_surface = np.sqrt(dh**2+d_r_c**2)*(c_max/dimen_c)\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "##################################################################################################    \n",
-    "    \n",
     "    surface = dl*ds_surface \n",
     "\n",
     "    \n",
@@ -345,52 +299,9 @@
     "    \n",
     "    surface = 0.5*(surface2+surface4)\n",
     "    \n",
-    "   \n",
-    "    \n",
-    "    \n",
     "    surface_size = np.sum(surface)*N\n",
-    "    return H, surface_size"
+    "    return H, surface_size\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5ac4d0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c35e726e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80ba892e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "547824d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43014fbe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -400,7 +311,7 @@
    "outputs": [],
    "source": [
     "def Main_M(v, dimen, m_ranges, n_ranges):\n",
-    "    C_ranges = np.linspace(1e-16, 0.999*c_max, dimen)\n",
+    "    C_ranges = np.linspace(1e-16, 0.99999*c_max, dimen)\n",
     "    theta_ranges = np.linspace(0, (2*np.pi)/N, dimen)\n",
     "    m_length = len(m_ranges)\n",
     "    n_length = len(n_ranges)\n",
@@ -415,39 +326,40 @@
     "    surface_small = M_n_surface_matrix.min()\n",
     "    index = np.where(M_n_surface_matrix == np.min(M_n_surface_matrix))\n",
     "    height = M_n_height_matrix[index]\n",
-    "    return surface_small, height, M_n_surface_matrix, m_ranges[index[0]], n_ranges[index[1]]"
+    "    return surface_small, height, M_n_surface_matrix,m_ranges[index[0]], n_ranges[index[1]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "64f33ee7",
+   "id": "16b2bcfd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Volume = [0.3]#,0.06,0.1,0.14, 0.18, 0.5, 1, 1.5]\n",
-    "#m_ranges = np.linspace(0.5, 1.5, 200)\n",
-    "#n_ranges = np.linspace(0.8,2, 200)\n",
-    "#m_ranges = np.linspace(0.3, 0.7, 200)\n",
-    "#n_ranges = np.linspace(0.6,1, 200)\n",
-    "#m_ranges = np.linspace(1, 1.3, 200)\n",
-    "#n_ranges = np.linspace(0.8,1.2, 200)\n",
-    "#m_ranges = np.linspace(0.3, 0.7, 200)\n",
-    "#n_ranges = np.linspace(0.9,1.2, 200)\n",
+    "Volume = [0.3]#,0.1, 0.14, 0.18, 0.5, 1, 1.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e2a45269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "m_ranges = np.arange(-3, 3, 0.1)\n",
     "n_ranges = np.arange(0.5,2, 0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f4b3aac9",
+   "execution_count": 16,
+   "id": "d65d7388",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "001e520e44754dc79dafb034be1518b4",
+       "model_id": "cb46d97b6c3b4e0aa7ceaa2817886f41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,9 +377,9 @@
     "s_matrixs = []\n",
     "m_indexs = []\n",
     "n_indexs = []\n",
-    "Dimen = 200#####recommand 200\n",
+    "Dimen = 200\n",
     "for v in Volume:\n",
-    "    s, h, s_matrix, m, n= Main_M(v, Dimen, m_ranges, n_ranges)\n",
+    "    s, h, s_matrix, m,n= Main_M(v, Dimen, m_ranges, n_ranges)\n",
     "    ss.append(s)\n",
     "    hh.append(h)\n",
     "    s_matrixs.append(s_matrix)\n",
@@ -477,17 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "496413e6",
+   "execution_count": 17,
+   "id": "f72cc9d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([0.8])]"
+       "[array([0.7])]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,17 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b940cca5",
+   "execution_count": 18,
+   "id": "f9a4e38a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([0.93])]"
+       "[array([1.3])]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "04176cb7",
+   "execution_count": 19,
+   "id": "b7c34c15",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([0.469833])]"
+       "[array([0.49533455])]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,57 +452,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c6071e76",
+   "execution_count": 20,
+   "id": "b5412590",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.748296474443767]"
+       "[1.8784472124696647]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "50e2163c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "surface_energy = s_matrixs[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "14719a90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "savetxt('hex03.csv', surface_energy, delimiter=',')"
+    "ss\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80bda9be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8dd9291f",
+   "id": "f47000ad",
    "metadata": {},
    "outputs": [],
    "source": []
